--- a/Task 1/style.css
+++ b/Task 1/style.css
@@ -22,7 +22,7 @@ body {
       rgba(2, 82, 89, 0.9),
       rgba(255, 255, 255, 0)
     ),
-    url("Task 1/Assets/bg.jpg");
+    url("Assets/bg.jpg");
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
